--- a/docs/posts/2005-06-07-500gb-hard-drives-in-q3-2005.markdown
+++ b/docs/posts/2005-06-07-500gb-hard-drives-in-q3-2005.markdown
@@ -3,6 +3,10 @@ authors:
   - johnsturgeon
 date:
   created: 2005-06-07
+categories:
+  - HDTV
+tags:
+  - hdtv
 ---
 
 # 500GB Hard Drives in Q3 2005
